--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "materialize-css": "^1.0.0-rc.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-hook-form": "^7.41.1",
+    "react-toastify": "^9.1.1",
+    "swr": "^2.0.0",
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@types/materialize-css": "^1.0.11"
   }
 }
