--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
     "react-toastify": "^9.1.1",
+    "recoil": "^0.7.6",
     "swr": "^2.0.0",
     "typescript": "4.9.4",
     "yup": "^0.32.11"
